--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,9 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div><%= f.label :email %> <br />
+  <%= f.email_field :email %>
+	<p> Note: Please use school email </p></div>
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
