--- a/app/views/welcome/FAQ.html.erb
+++ b/app/views/welcome/FAQ.html.erb
@@ -19,7 +19,7 @@
 		
 		<div id = "C">
 			<h3> What do I need to start using Dormy? </h3>
-				<h4> You need a Facebook account, and you need to be in your school's network. </a></h4>
+				<h4> You need to have an email address associated with your school. Currently, we only support Stanford. </a></h4>
 		</div>
 				
 		<div id = "D">
