--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,19 +8,20 @@
 	<p> Note: Please use school email </p></div>
 
   <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+      <%= f.password_field :password %></div>
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
 	<div>
 		<%= f.label :school %> <br />
-		<%= f.text_field :school_id %>
+		<%= f.collection_select :school_id, User::SCHOOLS, :to_s, :to_s%> 
+		       <%#uncomment to add more schools:include_blank => true %>
 	</p> </div>
 	
 	<div>
 		<%= f.label :dorm %> <br />
-		<%= f.text_field :dorm_id %>
+		<%= f.collection_select :dorm_id, User::DORMS, :to_s, :to_s, :include_blank => true %>
 	</p> </div>
 
   <div><%= f.submit "Sign up" %></div>
