--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 <section id = "bottom"> 		
 
 	<div id = "navigation"> 			      
 		<ul>
-        	<li>FAQ</li>
-			<li>About</li>
-        	<li> <a href="http://www.stuffstanfordstudentseat.tumblr.com" title="Blog"> Blog </a></li>
+        	<%= link_to "Sign in",  new_user_session_path(@user)%>
+			<%= link_to "Sign out", destroy_user_session_path(@user)%>
+			<%= link_to "Sign up", new_user_registration_path(@user)%>
+			<%= link_to "FAQ", welcome_FAQ_path%>
+			<%= link_to "About", welcome_about_path%>
+        	<a href="http://www.stuffstanfordstudentseat.tumblr.com" title="Blog"> Blog </a>
 
-			<p class="notice"><%= notice %></p>
-			<p class="alert"><%= alert %></p>
+		
     
       </ul>
     </div>
