--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
-<%= yield %>
+<div class ="container">
+	<%= yield %>
+</div>
 <section id = "bottom"> 		
 
 	<div id = "navigation"> 			      
