--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
 			<h2> How It Works... </h2> 
 				<div id  = "step_1" class="how_it_works">
 					<img src = "http://placekitten.com/g/250/250" />
-					<h4> 1. Authenticate that you're part of your college network by logging in through Facebook.  </h4>
+					<h4> 1. Sign up through the sign up form using your school email address.  </h4>
 				</div>
 			
 				<div id = "step_2" class="how_it_works">
@@ -27,7 +27,7 @@
 				
 				<div id = "step_3" class="how_it_works">
 				<img src = 	"http://placekitten.com/g/250/250" /> 
-					<h4> 3. Browse others in your dorm, and find out where your friends are living. </h4>
+					<h4> 3. Browse others in your dorm, and find out where your friends are living! </h4>
 				</div>
 			</div>
 		</section>
