--- a/app/views/dorms/show.html.erb
+++ b/app/views/dorms/show.html.erb
@@ -1,7 +1,16 @@
 <h1> <%= @dorm.name%></h1>
 
 <h2> Here is everyone in your dorm! </h2>
-
 <h3> <% @dorm.users.each do |user| %> 
-	<%= user.name%> <br/>
+	<%= user.name %> <br/>
 	<% end %> </h3>
+
+	<p> Type in a person and see where they're living OR search for a dorm and see who is living there! </h2>
+	<%= form_tag search_path, :method => "get" do %>
+	
+	<p> 
+		<%= search_field_tag(:name)%>
+		<%= submit_tag "Search", :name => nil%>
+	</p>
+	
+	<%end%>
