--- a/app/views/welcome/FAQ.html.erb
+++ b/app/views/welcome/FAQ.html.erb
@@ -5,29 +5,29 @@
 	</head>
 	
 <body>
-<div id = "header3">
-	<h1> FAQ </h2>
+<div class = "page-header">
+	<h1> FAQ </h1>
 </div>
 
 <section id = "questions">
 	
 
-		<div id = "B">
+		<div id = "one">
 			<h3> Do I need to pay to use Dormy? </h3> 
 				<h4> Nope, Dormy is completely free :) </h4>
 		</div>
 		
-		<div id = "C">
+		<div id = "two">
 			<h3> What do I need to start using Dormy? </h3>
 				<h4> You need to have an email address associated with your school. Currently, we only support Stanford. </a></h4>
 		</div>
 				
-		<div id = "D">
+		<div id = "three">
 			<h3> Who made this?</h3>
 				<h4> Hi! I'm Vinamrata Singal, and I built this using Ruby with Rails; I'll be entering Stanford next fall as a freshman. </h4>
 		</div>
 				
-		<div id = "E">
+		<div id = "four">
 			<h3> I'm having technical difficulties/I want to suggest a feature. Who do I contact? </h3>
 				<h4> If you have any questions, concerns, etc. feel free to email me at vinamratasingal@me.com and I will get back to you as soon as possible! </h4> 
 		</div>
