--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -5,14 +5,14 @@
 	</head>
 	
 <body>
-	<div id = "header3">
+	<div class = "page-header">
 		<h1> About </h2>
 		</div>
 
 
-		<div id = "A">
-			<h3> What is Dormy? </h3> 
-				<h4> Dormy is an application that enables you to see who's in your dorm at your school and where your friends are. No more waiting for texts from your friends, or writing it down- Dormy is all you need.</h4> 
+		<div id = "what" class = "hero-unit">
+			<h2> What is Dormy? </h2> 
+				<h3> Dormy is an application that enables you to see who's in your dorm at your school and where your friends are. No more waiting for texts from your friends, or writing it down- Dormy is all you need.</h3> 
 				</div>
 </body>
 </html>
