--- a/app/assets/stylesheets/dorms.css.scss
+++ b/app/assets/stylesheets/dorms.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the dorms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#search {
+	padding: 30px; 
+	margin: 2px; 
+}
