--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#footer {
+	 padding: 40px; 
+	margin: 2px; 
+}
+
+#one {
+padding: 20px; 
+margin: 2px; 
+}
+
+#two {
+padding: 20px;
+margin: 2px;  
+}
+
+#three {
+padding: 20px;
+margin: 2px;  
+}
+
+#four {
+padding: 20px;
+margin: 2px;  
+}
+
+#what {
+padding: 20px; 
+margin: 2px; 
+}
+
+
