--- a/app/views/dorms/show.html.erb
+++ b/app/views/dorms/show.html.erb
@@ -1,16 +1,18 @@
-<h1> <%= @dorm.name%></h1>
+<h1> <div class = "page-header"> <%= @dorm.name%></div> </h1>
 
-<h2> Here is everyone in your dorm! </h2>
-<h3> <% @dorm.users.each do |user| %> 
+<h2> Welcome back, here is everyone in your dorm! </h2>
+
+<h3><blockquote> <% @dorm.users.each do |user| %> 
 	<%= user.name %> <br/>
-	<% end %> </h3>
+	<% end %> </blockquote> </h3>
 
+	<div id = "search">		
 	<p> Type in a person and see where they're living OR search for a dorm and see who is living there! </h2>
 	<%= form_tag search_path, :method => "get" do %>
-	
-	<p> 
+		<p> 
 		<%= search_field_tag(:name)%>
-		<%= submit_tag "Search", :name => nil%>
+		<%= submit_tag "Search", :name => nil, :class => "btn btn-primary"%>
 	</p>
 	
 	<%end%>
+	</div>
