--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,28 +5,26 @@
 	</head>
 	
 <body>
- <div id = "header"> 
+ <div class = "hero-unit"> 
     <h1> Find out where your friends are. </h1> 
-  </div>
-  <div id = "header2"> 
-    <h1> Figure out the other people who are living in your dorm. </h1>
+	<h1> Figure out the other people who are living in your dorm. </h1>
   </div> 
   
 	<section id = "how_it_works"> 
-		<div id = "prevent_float">
+		<div class = "row" id = "A">
 			<h2> How It Works... </h2> 
-				<div id  = "step_1" class="how_it_works">
-					<img src = "http://placekitten.com/g/250/250" />
+				<div class = "span4"> 
+					<img src= "http://placekitten.com/g/250/250" class="img-rounded">
 					<h4> 1. Sign up through the sign up form using your school email address.  </h4>
 				</div>
 			
-				<div id = "step_2" class="how_it_works">
-					<img src = 	"http://placekitten.com/g/250/250" /> 
+				<div class="span4" id = "B">
+					<img src = 	"http://placekitten.com/g/250/250" class="img-polaroid"> 
 					<h4> 2. Add information to your account, such as what dorm you're in and your college. </h4>
 				</div>
 				
-				<div id = "step_3" class="how_it_works">
-				<img src = 	"http://placekitten.com/g/250/250" /> 
+				<div class="span4" id = "C">
+				<img src = 	"http://placekitten.com/g/250/250" class="img-polaroid"> 
 					<h4> 3. Browse others in your dorm, and find out where your friends are living! </h4>
 				</div>
 			</div>
