--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,50 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => "form-horizontal", :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-      <%= f.text_field :name %></div>
+  <div class="control-group">
+    <%= f.label :name, class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :name, :placeholder => "Name" %>
+    </div>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="control-group">
+    <%= f.label :email, class: "control-label" %>
+    <div class="controls">
+      <%= f.email_field :email, :placeholder => "Email" %>
+      <%= content_tag :span, "Please use your school email address", class: "help-inline" %>
+    </div>
+  </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+  <div class="control-group">
+    <%= f.label :password, class: "control-label" %>
+    <div class="controls">
+      <%= f.password_field :password, :placeholder => "Password" %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="control-group">
+    <%= f.label :password_confirmation, class: "control-label" %>
+    <div class="controls">
+      <%= f.password_field :password_confirmation, :placeholder => "Retype your password" %>
+    </div>
+  </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <div class="control-group">
+    <%= f.label :school_id, class: "control-label" %>
+    <div class="controls">
+      <%= f.collection_select :school_id, School.all, :id, :name, {:include_blank => true} %>
+    </div>
+  </div>
 
-	<div>
-		<%= f.label :school %> <br />
-		<%= f.collection_select :school_id, School.all, :id, :name, {:include_blank => true} %>
-	</p> </div>
-	
-	<div>
-		<%= f.label :dorm %> <br />
-		<%= f.collection_select :dorm_id, Dorm.all, :id, :name, {:include_blank => true} %>
-	</p> </div>
+  <div class="control-group">
+    <%= f.label :dorm_id, class: "control-label" %>
+    <div class="controls">
+      <%= f.collection_select :dorm_id, School.all, :id, :name, {:include_blank => true} %>
+    </div>
+  </div>
 
   <%= f.submit "Update", :class => "btn btn-info"%>
 <% end %>
