--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -14,5 +14,6 @@
 			<h2> What is Dormy? </h2> 
 				<h3> Dormy is an application that enables you to see who's in your dorm at your school and where your friends are. No more waiting for texts from your friends, or writing it down- Dormy is all you need.</h3> 
 				</div>
+		<img src = 	"http://ct.fra.bz/ol/fz/sw/i49/5/2/20/fbz_89cf660429c240b61bc095a695c6d8ba.jpg" width="600" height="500" id="pic1"> 
 </body>
 </html>
