--- a/app/views/dorms/show.html.erb
+++ b/app/views/dorms/show.html.erb
@@ -7,12 +7,11 @@
 	<% end %> </blockquote> </h3>
 
 	<div id = "search">		
-	<p> Type in a person and see where they're living OR search for a dorm and see who is living there! </h2>
+	<h3> Type in a person and see where they're living OR search for a dorm and see who is living there! </h3>
+	<div id="search2">
 	<%= form_tag search_path, :method => "get" do %>
-		<p> 
-		<%= search_field_tag(:name)%>
-		<%= submit_tag "Search", :name => nil, :class => "btn btn-primary"%>
-	</p>
 	
+		 <%= search_field_tag(:name)%> 
+		 <div id="search_button"> <%= submit_tag "Search", :name => nil, :class => "btn btn-info"%> </div>
 	<%end%>
 	</div>
