--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,9 @@
 <h2> Here are your search results </h2> </div>
 
 <h3> Here are the users that match your query </h3>
-<table class = "table table-striped">
+
+<button class= "btn btn-primary" id="search3"> Show Results </button>
+<table class = "table table-striped" id="users2">
 	<tr>
 		<th> Name </th>
 		<th> Dorm </th>
@@ -18,7 +20,8 @@
 
 <div id = "dorms"> 
 	<h3> Here are the dorms that matched your query </h3>
-<table class = "table table-striped">
+	<button class= "btn btn-primary" id="search4"> Show Results </button>
+<table class = "table table-striped" id="dorms2">
 	<tr>
 		<th> Dorm </th>
 	</tr>
@@ -29,4 +32,5 @@
 </tr>
 </table>
 </div>
+</html>
 
