--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,33 +6,35 @@
 	
 <body>
  <div class = "hero-unit"> 
-    <h1> Find out where your friends are. </h1> 
-	<h1> Figure out the other people who are living in your dorm. </h1>
+    <h1> Find out where your friends are.</h1> 
+	  <h2> Figure out the other people who are living in your dorm.</h2>
   </div> 
   
 	<section id = "how_it_works"> 
 		<div class = "row" id = "A">
-			<h2> How It Works... </h2> 
+  		  <div class="span12">
+  		    <h2> How It Works... </h2> 
+  		  </div>
 				<div class = "span4"> 
-					<img src= "http://placekitten.com/g/250/250" class="img-rounded">
+					<a href="http://imgur.com/EwEd9"><img src="http://i.imgur.com/EwEd9.png" alt="" height="250" width="300"/></a>
 					<h4> 1. Sign up through the sign up form using your school email address.  </h4>
 				</div>
 			
 				<div class="span4" id = "B">
-					<img src = 	"http://placekitten.com/g/250/250" class="img-polaroid"> 
+					<img src = 	"http://www.stanford.edu/group/armyrotc/imgs/stanfordoval.jpg" width="250" height="250" class="img-polaroid"> 
 					<h4> 2. Add information to your account, such as what dorm you're in and your college. </h4>
 				</div>
 				
 				<div class="span4" id = "C">
-				<img src = 	"http://placekitten.com/g/250/250" class="img-polaroid"> 
+				<img src = 	"http://www.lagunacc.com/images/college-friends.jpg" width="250" height="250" class="img-polaroid"> 
 					<h4> 3. Browse others in your dorm, and find out where your friends are living! </h4>
 				</div>
-			</div>
-		</section>
+		</div>
+	</section>
 		
 				
-		<div id = "footer"> 
-		<h4> What are you waiting for? Join the hundreds using Dormy now! </h4>
+	<div id = "footer"> 
+	  <h4> What are you waiting for? Join the hundreds using Dormy now! </h4>
 	</div>	
 	
 	
